--- a/videoPlayer/index.html
+++ b/videoPlayer/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <video controls class="video" id="video" preload="metadata" poster="poster.jpg">
-        <source src="https://ftp.f1nalboss.de/data/imgly/videoplayer/testvid.mp4" type="video/mp4"></source>
+        <source src="testvid.mp4" type="video/mp4"></source>
       </video>
 
       <div class="video-controls hidden" id="video-controls">
